--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,14 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  
 }
 
+html,
 body {
   margin: 0;
-  padding: 0; /* Remove padding around the entire body */
+  padding: 0;
+  height: 100%; /* Ensures body covers full height of the screen */
+  min-height: 100%; /* Covers edge cases for smaller content */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -24,8 +26,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-html, body {
-  height: 100%; /* Ensures body covers full height of the screen */
 }
